[feat] AWS S3 v3 migration in order to get current version of aws-s3 standarts
